gl51-master/src/test/deca/context/invalid/test_rule3_33arithmOp.deca
// Description
// Erreur operation arithmétique

{
    boolean isTrue = true;
    float f = 2.2f;
    f = f + isTrue; //on ne peut pas sum float et boolean
    //PASSED
}
